our story page done and fixed cart item overflow from container

--- a/styles/global.css
+++ b/styles/global.css
@@ -483,7 +483,6 @@
   flex-direction: column;
   row-gap: 10px;
   padding: 10px;
-  width: 100%;
 }
 
 .cart-items-container::-webkit-scrollbar {
@@ -699,6 +698,21 @@
   text-align: center;
   text-transform: uppercase;
   line-height: 2.5rem;
+}
+
+.sub-heading {
+  font-size: 2.25rem;
+  color: black;
+  font-weight: 800;
+  letter-spacing: -1px;
+  text-align: left;
+  text-transform: uppercase;
+  line-height: 2.5rem;
+}
+
+.text {
+  font-size: 15px;
+  font-weight: 400;
 }
 
 .product {
