--- a/styles/making-of.css
+++ b/styles/making-of.css
@@ -10,7 +10,7 @@
 .section-img img {
   width: 100%;
   object-fit: contain;
-  /* height: 175px; */
+  height: 175px;
   box-shadow: 0px 0px 10px 2px rgba(0, 0, 0, 0.2);
 }
 
